@@ -132,8 +132,9 @@ public class EmbeddedSolrServer extends SolrServer
       throw new SolrException( SolrException.ErrorCode.BAD_REQUEST, "unknown handler: "+path );
     }
 
+    SolrQueryRequest req = null;    
     try {
-      SolrQueryRequest req = _parser.buildRequestFrom( core, params, request.getContentStreams() );
+      req = _parser.buildRequestFrom( core, params, request.getContentStreams() );
       req.getContext().put( "path", path );
       SolrQueryResponse rsp = new SolrQueryResponse();
       core.execute( handler, req, rsp );
@@ -143,7 +144,6 @@ public class EmbeddedSolrServer extends SolrServer
       
       // Now write it out
       NamedList<Object> normalized = getParsedResponse(req, rsp);
-      req.close();
       return normalized;
     }
     catch( IOException iox ) {
@@ -153,7 +153,11 @@ public class EmbeddedSolrServer extends SolrServer
       throw new SolrServerException( ex );
     }
     finally {
-      core.close();
+      try {
+        if (req != null) req.close();
+      } finally {
+        core.close();
+      }
     }
   }
   
